[tool.poetry]
name = "pysnmplib"
version = "0.1.0"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.7"
pysnmp-pysmi = "^1.0.4"
pycryptodomex = "pysnmp-pyasn1"
pysnmp-pyasn1 = "^1.0.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
